Refs #141282 - Fix clear btn on small screen issue.

--- a/src/SearchBlock/styles.less
+++ b/src/SearchBlock/styles.less
@@ -208,6 +208,7 @@ div#page-document {
         background: @sf-light-gray !important;
         border-radius: 2px;
         color: @sf-azure !important;
+        float: left;
         font-size: 12px;
       }
 
